test/library/standard/Reflection/primitives/DependentFailsCanResolve.good
DependentFailsCanResolve.chpl:9: In method 'foo':
DependentFailsCanResolve.chpl:9: error: could not find a copy initializer ('init=') for type 'inner' from type 'string'
DependentFailsCanResolve.chpl:3: note: this candidate did not match: inner.init=(other: inner)
DependentFailsCanResolve.chpl:9: note: because actual argument #1 with type 'string'
DependentFailsCanResolve.chpl:3: note: is passed to formal 'other: inner'
